...

  @override
  Widget build(BuildContext context) => DefaultTabController(
        length: 2,
        child: Scaffold(
          appBar: AppBar(
            title: const Text('Para validar'),
            bottom: const TabBar(tabs: [Tab(text: 'Comprovativos'), Tab(text: 'Ocorrências')]),
          ),
          body: const TabBarView(children: [_DeclarationsTab(), _IncidentsTab()]),
        ),
      );
}
...
